--- a/ehr/templates/home.html
+++ b/ehr/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <div class="container-fluid bg-1 text-center" id="mainContent"  style="background-image: url({% static "articles/h.jpg" %});">
+  <div class="container-fluid bg-1 text-center" id="mainContent">
     <h3 style="color:black;"><big><b><i>ELECTRONIC HEALTH RECORD(EHR) ENCRYPTION SYSTEM</i></b></big></h3>
   <!-- <h5>         ...the cloud's agent</h5> -->
     <br>
