--- a/ehr/templates/pharmacylist.html
+++ b/ehr/templates/pharmacylist.html
@@ -23,7 +23,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 text-bg-light rounded-3">
           <h2>VIEW DRUGS</h2>
-          <button class="btn btn-outline-light" type="button"><a href="{% url 'pharmacy' %}" style = "text-color:red">CLICK TO VIEW DRUG</a></button>
+          <button class="btn btn-outline-light" type="button"><a href="{% url 'drug' %}" style = "text-color:red">CLICK TO VIEW DRUG</a></button>
         </div>
       </div>
     </div>
