--- a/ehr/templates/drugview.html
+++ b/ehr/templates/drugview.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-  <div class="container">
+  <div class="container-fluid bg-1 text-center" id="mainContent">
     <h3 style="color:black;"><big><b><i>ELECTRONIC HEALTH RECORD(EHR) ENCRYPTION SYSTEM</i></b></big></h3>
   <!-- <h5>         ...the cloud's agent</h5> -->
     <br>
@@ -23,22 +23,26 @@
                                 <thead class="thead-light">
                                     <tr >
                                         <p align="right"> <a href="#" class="btn btn-tool" style="color: #4CAF50;" onclick="window.print()" ><b>Print</b></a></p>
-                                        <th>Patient ID</th>
-                                        <th>Patient Name</th>
-                                        <th>Purpose</th>
-                                        <th>Doctor Name</th>
-                                        <th>Patient Hward</th>
+                                        <th>Drug Name</th>
+                                        <th>Cost</th>
+                                        <th>Category Type</th>
+                                        <th>Selling Price</th>
+                                        <th>Quality</th>
+                                        <th>Man Date</th>
+                                        <th>Exp Date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for p in patient %}
-                                    <tr class='clickable-row' data-href="{% url 'patient-detail' p.id %}">
-                                        <td>{{ p.id}}</td>
-                                        <td>{{p.patientName}}</td>
-                                        <td>{{ p.purpose}}</td>
-                                        <td>{{ p.doctorName}}</td>
-                                        <td>{{ p.patientHward}}</td>
-                                    {% endfor %}
+                                    {% for p in drug %}
+                                    <tr>
+                                        <td>{{ p.Drug_name}}</td>
+                                        <td>{{ p.Cost}}</td>
+                                        <td>{{ p.Category}}</td>
+                                        <td>{{ p.Selling_price}}</td>
+                                        <td>{{ p.Qty}}</td>
+                                        <td>{{ p.Man_date}}</td>
+                                        <td>{{ p.Exp_date}}</td>
+                                    {%endfor%}
                                 </tbody>
                             </table>
                         </div>
