--- a/ehr/templates/patientlogin.html
+++ b/ehr/templates/patientlogin.html
@@ -3,25 +3,24 @@
 {% block content %}
 
 <div class="container" id="mainContent"  style="width:750px; height:720px";>
-  <h2>  </h2>
-  <form action="{% url 'patientlogin_view' %}" method="get" class="form-horizontal" role="form">
-      <h3 style="color:black; text-align:center"><big><b><i>ELECTRONIC HEALTH RECORD(EHR) ENCRYPTION SYSTEM</i></b></big></h3>
-    <!-- <h5>         ...the cloud's agent</h5> -->
-      <br>
-      <br/>
-      <br/>
-      <br>
+  <h3 style="color:black; text-align:center"><big><b><i>ELECTRONIC HEALTH RECORD(EHR) ENCRYPTION SYSTEM</i></b></big></h3>
+  <!-- <h5>         ...the cloud's agent</h5> -->
+    <br>
 
-    <div class="form-group">
+  <div>
+    <div class="md-light  rounded" >
+      <div class="col-sm-8 mx-auto">
+        <form action="{% url 'patientlogin_view' %}" method="get" class="form-horizontal" role="form">
+          <div class="form-group">
       <label class="control-label col-sm-2" for="patientName">Patient Name:</label>
-      <div class="col-sm-6">
+      <div class="col-sm-8">
         <input type="text" oninput = "auth()" class="form-control" name="patientName" placeholder="Enter Patient Name">
       </div>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="patientPassword">Password:</label>
-      <div class="col-sm-6">
+      <div class="col-sm-8">
         <input type="password" oninput = "auth()" class="form-control" name="patientPassword" placeholder="Enter Password">
       </div>
     </div>
@@ -34,11 +33,14 @@
       </div>
     </div>
     <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-2">
+      <div class="col-sm-offset-2 col-sm-8">
        <button id="btnSignIn" class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
       </div>
     </div>
   </form>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
 
